--- a/newspaper-project/requirements.txt
+++ b/newspaper-project/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.8.1
 black==25.1.0
 click==8.1.8
+crispy-bootstrap5==2024.10
 Django==5.1.5
+django-crispy-forms==2.3
 mypy-extensions==1.0.0
 packaging==24.2
 pathspec==0.12.1
